7174928: JSR 292: unresolved invokedynamic call sites deopt and osr infinitely

Reviewed-by: kvn